[project]
name = "b62"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "hypothesis>=6.137.1",
    "maturin>=1.9.3",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.7",
]
