[project]
name = "b62"
version = "1.1.2"
description = "A lightning-fast, zero-dependency Base62 encoder/decoder for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [{ name = "Maksim Smirnov", email = "smirnoffmg@gmail.com" }]
license = { text = "MIT" }
keywords = ["base62", "encoding", "decoding", "url-shortening", "performance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/smirnoffmg/b62"
Documentation = "https://github.com/smirnoffmg/b62#readme"
Repository = "https://github.com/smirnoffmg/b62.git"
Issues = "https://github.com/smirnoffmg/b62/issues"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "b62"

[dependency-groups]
dev = [
    "hypothesis>=6.137.1",
    "maturin>=1.9.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.7",
    "safety>=2.3.0",
    "bandit>=1.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "--verbose"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
]
